...
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Mapa',
          tabBarButtonTestID: 'tab-mapa',
          tabBarIcon: ({ color, size }) => <MapPin size={size} color={color} weight="fill" />,
        }}
      />
      <Tabs.Screen
        name="veiculos"
        options={{
...
        }}
      />
      <Tabs.Screen
        name="notificacoes"
        options={{
          title: 'Alertas',
          tabBarButtonTestID: 'tab-alertas',
          tabBarIcon: ({ color, size }) => <Bell size={size} color={color} weight="fill" />,
        }}
      />
    </Tabs>
  );
}
...
